# dh-cmake

./: .gitignore  README.md  dh_cmake_common.py  dh_cpack_install  setup.py  test.py
debian/: changelog  control  copyright  rules
dhcmake/: __init__.py  arch.py  cmake.py  common.py  cpack.py  ctest.py  deb822.py  dh_ctest_driver.cmake
dhcmake/tests/: __init__.py  cmake.py  common.py  cpack.py  ctest.py  deb822.py  fmt.py  source_check.py
dhcmake/tests/data/debian_pkg/debian/: control
dhcmake_test/: __init__.py  cmake.py  common.py  cpack.py  ctest.py  deb822.py
examples/cmake/: CMakeLists.txt  README.md
examples/cmake/debian/: changelog  control  rules
examples/cpack/: README.md
examples/cpack/debian/: control  rules
examples/ctest/debian/: control  rules
perl5/Debian/Debhelper/Sequence/: cmake.pm  cpack.pm  ctest.pm
sequence/: ctest.pm
test_data/debian_pkg/: CMakeLists.txt  CTestConfig.cmake
test_data/debian_pkg/debian/: control  ctest.mk  libdh-cmake-test-extra-32.cpack-component-groups  libdh-cmake-test-extra-32.cpack-components  rules
